--- a/spring-boot-project/pom.xml
+++ b/spring-boot-project/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.12</version>
         </dependency>
+<!--        引入使用邮箱的启动依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
