--- a/spring-boot-project/src/main/resources/application.properties
+++ b/spring-boot-project/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 server.port=8090
+#\u6570\u636E\u6E90\u76F8\u5173\u8BBE\u7F6E
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/leveltwo1?serverTimezone=CST
 spring.datasource.username=root
 spring.datasource.password=root
 #\u8BA9spring\u627E\u5230\u6211\u4EEC\u56FD\u9645\u5316\u8BED\u8A00\u7684\u914D\u7F6E\u6587\u4EF6--Resource Bundle \u4E3Alist \u6240\u4EE5\u662F i18n.list
 spring.messages.basename=i18n.list
+#\u90AE\u7BB1\u76F8\u5173\u8BBE\u7F6E--smtp\u534F\u8BAE\u662F\u4E00\u4E2A\u7BA1\u53D1\u9001\u90AE\u4EF6\u7684\u534F\u8BAE\uFF08simple mail Transfer Protocol\uFF09
+spring.mail.username=1460793107@qq.com
+spring.mail.password=qfeeiqlubuydfjdf
+#\u8BBE\u7F6ESMTP\u670D\u52A1\u7684\u7AEF\u53E3\u8BBE\u7F6E-\u6211\u4EEC\u53EF\u4EE5\u4E00\u822Cqq\u5C31\u662Fsmtp.qq.com 126\u5C31\u662Fsmtp.126.com
+spring.mail.host=smtp.qq.com
+#\u90AE\u7BB1\u4F7F\u7528ssl\u52A0\u5BC6\u4F20\u8F93\u65F6\u662F\u9700\u8981\u914D\u7F6E\u7684\u9009\u9879--ssl\u662F\u90AE\u4EF6\u63A5\u53D7\u7684\u534F\u8BAE
+spring.mail.properties.mail.smtp.ssl.enable=true
